added sessions in app
added login, logout functionality
added reset passsword functionality
added more functions to Users model
changed some functions in auth to handle edge cases

--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in</title>
+    <title>Forgot Password</title>
 </head>
 
 <body>
-    <h1>Welcome Back!</h1>
+    <h1>Email of the account</h1>
           
-          <form action="/signin" method="POST">
+          <form action="/forgot_password" method="POST">
           
             {{form.csrf_token}}
 
@@ -23,18 +23,7 @@
             {% endfor %}
 
           <br>
-
-            <label>
-              <b>Password</b> 
-            </label>
-            <input type="password" name="password" required />
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-          
-          <p class="forgot"><a href="/forgot_password">Forgot Password?</a></p>
-          
-          <button class="button" type="submit"/>Log In</button>
+          <button class="button" type="submit"/>Send email</button>
           
           </form>
 </body>
