added templates for error and flash msgs for login and reset password

--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -1,13 +1,12 @@
 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset password</title>
-</head>
+{% extends "msg_handler.html" %}
 
-<body>
+
+
+{% block body %}
+<div class="modal">
+  <div class="container">
+    <div class="modal-content">
     <h1>Reset password</h1>
           
           <form action="{{ post_url }}" method="POST">
@@ -33,7 +32,6 @@
           <button class="button" type="submit"/>Reset password</button>
           
           </form>
-</body>
-
-
-</html>
+        </div>
+      </div></div>
+{% endblock %}
