--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
-</head>
+{% extends "msg_handler.html" %}
 
-<body>
+
+
+{% block body %}
+
+<div class="modal">
+  <div class="container">
+    <div class="modal-content">
     <h1>Email of the account</h1>
           
           <form action="/forgot_password" method="POST">
@@ -26,7 +25,7 @@
           <button class="button" type="submit"/>Send email</button>
           
           </form>
-</body>
-
-
-</html>
+    </div>
+  </div>
+</div>          
+{% endblock %}
