--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,68 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<style>
-  body {font-family: Arial, Helvetica, sans-serif;}
-  * {box-sizing: border-box;}
-  
-  /* Full-width input fields */
-  input[type=email], input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-  }
-  
-  /* Add a background color when the inputs get focus */
-  input[type=email]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-  }
-  
+{% extends "msg_handler.html" %}
 
-  /* Add padding to container elements */
-  .container {
-    padding: 16px;
-  }
-  
-  /* The Modal (background) */
-  .modal {
-    display: block; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: #474e5d;
-    padding-top: 50px;
-  }
-  
-  /* Modal Content/Box */
-  .modal-content {
-    padding: 5%;
-    background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-  
 
-  
-  /* Change styles for cancel button and signup button on extra small screens */
-  @media screen and (max-width: 300px) {
-    .cancelbtn, .signupbtn {
-       width: 100%;
-    }
-  }
-  </style>
-<body>
-  
-          <div class="modal">
 
-{% block content %}
+{% block body %}
+
+<div class="modal">
 <div class="container">
   <div class="modal-content">
           <h1>Welcome Back!</h1>
@@ -86,7 +28,3 @@
         </div>
 </div></div>
 {% endblock %}
-</body>
-
-
-</html>
